Improve animation colors; fix warning bg overflow

--- a/src/launcher/features/apps/App/app.module.scss
+++ b/src/launcher/features/apps/App/app.module.scss
@@ -12,7 +12,9 @@
 
 @keyframes appWasInstalled {
     0% {
-        background-color: $primary;
+        // background-color: $primary;
+        // background-color: #ebfdff;
+        background-color: #cef9ff;
     }
     100% {
         background-color: white;
